Actualizadas las traducciones.

--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -606,6 +606,7 @@
     "field-required": "Camp requerit: %field%",
     "fields": "Camps",
     "file": "Fitxer",
+    "file-audio-codec-not-accepted": "Error en enviar el fitxer d'àudio %fileName% perquè el vostre còdec %codec% no està permès. Els còdecs permesos són: %supported%",
     "file-extension-not-accepted": "Error en enviar el fitxer %fileName% perquè la vostra extensió no està permesa. Les extensions permeses són: %accepted%",
     "file-name": "Nom d'arxiu",
     "file-not-exists": "No existeix el fitxer: %fileName%",
@@ -694,6 +695,7 @@
     "generated-supplier-orders": "%quantity% comandes de proveïdor generats.",
     "global-dto": "Dte. global",
     "global-dto-2": "Dte. global 2",
+    "graphics": "Gràfics",
     "greater-than": "Més gran que",
     "grid-help": "Control + intro per salt de línia. Pots moure o eliminar les línies fent clic al número de línia.",
     "group": "Grup",
@@ -938,6 +940,7 @@
     "maximum-amount-without-cifnif": "Màxim import sense CIF\/NIF",
     "maximum-stock": "Stock màxim",
     "may": "Maig",
+    "media-whatsapp-not-upload": "Error en pujar el fitxer multimèdia al servidor de WhatsApp: %file%",
     "mega-search": "MegaCercador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache netejada.",
@@ -1330,12 +1333,14 @@
     "sdk": "SDK",
     "search": "Cercar",
     "search-document": "Escriu el número de %doctype% per cercar.",
+    "search-message": "Buscar missatge",
     "search-product": "Cercar producte",
     "second-hand": "Segona mà",
     "second-quarter": "2n trimestre",
     "second-trimester": "Segon trimestre",
     "select": "Seleccionar",
     "select-all": "Seleccionar tot",
+    "select-content-for": "Selecciona contingut per a %content%",
     "select-none": "Seleccionar res",
     "select-plugin-zip-file": "Seleccionar plugin (zip):",
     "select-user": "Seleccionar Usuari",
@@ -1358,6 +1363,7 @@
     "sent-a-picture": "Va enviar una imatge",
     "sent-a-video": "Va enviar un vídeo",
     "sent-message-by": "Enviat per %nick% el %date%",
+    "sent-messages": "Missatges enviats",
     "sepa-suffix": "Sufix SEPA",
     "september": "Setembre",
     "sequences": "Seqüències",
@@ -1611,6 +1617,7 @@
     "valid-for-day": "Vàlid per a un dia",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
+    "validate-whatsapp-not-connection": "Error en validar el nombre de WhatsApp, no s'ha pogut establir connexió amb el servidor de WhatsApp",
     "valuation-type": "Tipus de valoració",
     "value": "Valor",
     "value-x": "Valor X",
