--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -606,6 +606,7 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Archivo",
+    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
     "file-extension-not-accepted": "Chyba při odesílání souboru %fileName% protože jeho přípona není povolena. Povolené přípony jsou: %accepted%",
     "file-name": "Nombre de archivo",
     "file-not-exists": "No existe el archivo: %fileName%",
@@ -694,6 +695,7 @@
     "generated-supplier-orders": "%quantity% pedidos de proveedor generados.",
     "global-dto": "Dto. global",
     "global-dto-2": "Dto. global 2",
+    "graphics": "Gráficos",
     "greater-than": "Mayor que",
     "grid-help": "Control + intro para salto de línea. Puedes mover o eliminar las líneas haciendo clic en el número de línea.",
     "group": "Grupo",
@@ -938,6 +940,7 @@
     "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Stock máximo",
     "may": "Květen",
+    "media-whatsapp-not-upload": "Error al subir el archivo multimedia al servidor de WhatsApp: %file%",
     "mega-search": "MegaHledání",
     "memcache": "Memcache",
     "memcache-clear": "Memcache limpiada.",
@@ -1330,12 +1333,14 @@
     "sdk": "SDK",
     "search": "Buscar",
     "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-message": "Hledat zprávu",
     "search-product": "Buscar producto",
     "second-hand": "Segunda mano",
     "second-quarter": "2. čtvrtletí",
     "second-trimester": "Segundo trimestre",
     "select": "Seleccionar",
     "select-all": "Seleccionar todo",
+    "select-content-for": "Selecciona contenido para %content%",
     "select-none": "Seleccionar nada",
     "select-plugin-zip-file": "Seleccionar plugin (zip):",
     "select-user": "Seleccionar usuario",
@@ -1358,6 +1363,7 @@
     "sent-a-picture": "Poslal obrázek",
     "sent-a-video": "Poslal video",
     "sent-message-by": "Odesláno uživatelem %nick% dne %date%",
+    "sent-messages": "Mensajes enviados",
     "sepa-suffix": "Sufijo SEPA",
     "september": "Září",
     "sequences": "Secuencias",
@@ -1533,7 +1539,7 @@
     "time": "Hora",
     "timezone": "Zona horaria",
     "title": "Título",
-    "title-font-size": "Velikost písma titulu",
+    "title-font-size": "Velikost písma nadpisu",
     "title-url": "Título (URL)",
     "to": "Para",
     "to-refund": "A devolver",
@@ -1611,6 +1617,7 @@
     "valid-for-day": "Platný po dobu jednoho dne",
     "validate": "Ověřit",
     "validate-iban": "Ověřit IBAN",
+    "validate-whatsapp-not-connection": "Chyba při ověřování čísla WhatsApp, nebylo možné navázat spojení se serverem WhatsApp",
     "valuation-type": "Tipo de valoración",
     "value": "Valor",
     "value-x": "Valor X",
