--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -606,6 +606,7 @@
     "field-required": "Erforderliches Feld: %field%",
     "fields": "Felder",
     "file": "archivieren",
+    "file-audio-codec-not-accepted": "Fehler beim Senden der Audiodatei %fileName%, da der Codec %codec% nicht erlaubt ist. Erlaubte Codecs sind: %supported%",
     "file-extension-not-accepted": "Fehler beim Senden der Datei %fileName%, da ihre Erweiterung nicht erlaubt ist. Erlaubte Erweiterungen sind: %accepted%",
     "file-name": "Dateiname",
     "file-not-exists": "Datei existiert nicht: %fileName%",
@@ -694,6 +695,7 @@
     "generated-supplier-orders": "0 generierte Lieferantenbestellungen.",
     "global-dto": "allgemeiner Rabatt",
     "global-dto-2": "allgemeiner Rabatt 2",
+    "graphics": "Grafiken",
     "greater-than": "Größer als",
     "grid-help": "Ctrl + Enter für Zeilenumbruch. Sie können die Zeilen verschieben oder löschen, indem Sie auf die Zeilennummer klicken.",
     "group": "Gruppe",
@@ -938,6 +940,7 @@
     "maximum-amount-without-cifnif": "M",
     "maximum-stock": "Höchstbestand",
     "may": "Mai",
+    "media-whatsapp-not-upload": "Error al subir el archivo multimedia al servidor de WhatsApp: %file%",
     "mega-search": "MegaSuchmaschine",
     "memcache": "Memcache 0",
     "memcache-clear": "Memcache klärte sich.",
@@ -1330,12 +1333,14 @@
     "sdk": "SDK",
     "search": "Suche",
     "search-document": "Geben Sie die Nummer von %doctype% ein, um zu suchen.",
+    "search-message": "Nachricht suchen",
     "search-product": "Produkt suchen",
     "second-hand": "Z",
     "second-quarter": "Zweites Quartal",
     "second-trimester": "Zweites Trimester",
     "select": "Auswählen",
     "select-all": "Alle auswählen",
+    "select-content-for": "Selecciona contenido para %content%",
     "select-none": "Keine Auswahl treffen",
     "select-plugin-zip-file": "Wählen Sie die Plugin-Zip-Datei:",
     "select-user": "Benutzer auswählen",
@@ -1358,6 +1363,7 @@
     "sent-a-picture": "Ein Bild gesendet",
     "sent-a-video": "Ein Video gesendet",
     "sent-message-by": "Nachricht gesendet von %nick% am %date%",
+    "sent-messages": "Gesendete Nachrichten",
     "sepa-suffix": "SEPA-Suffix",
     "september": "September",
     "sequences": "Reihenfolgen",
@@ -1611,6 +1617,7 @@
     "valid-for-day": "Gültig für einen Tag",
     "validate": "bestätigen",
     "validate-iban": "IBAN bestätigen",
+    "validate-whatsapp-not-connection": "Fehler bei der Validierung der WhatsApp-Nummer, konnte keine Verbindung zum WhatsApp-Server herstellen",
     "valuation-type": "Bewertungsart",
     "value": "Wert",
     "value-x": "Wert-x",
