--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -606,6 +606,7 @@
     "field-required": "Field required: %field%",
     "fields": "Fields",
     "file": "File",
+    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
     "file-extension-not-accepted": "Failed to send file %fileName% because its extension is not allowed. The allowed extensions are: %accepted%",
     "file-name": "File name",
     "file-not-exists": "File not exists: %fileName%",
@@ -694,6 +695,7 @@
     "generated-supplier-orders": "%quantity% generated supplier orders.",
     "global-dto": "Global discount",
     "global-dto-2": "Global discount 2",
+    "graphics": "Gráficos",
     "greater-than": "Greater than",
     "grid-help": "Control + enter for line break. You can move or delete the lines by clicking on the line number.",
     "group": "Group",
@@ -938,6 +940,7 @@
     "maximum-amount-without-cifnif": "Maximum amount without CIF\/NIF",
     "maximum-stock": "Maximum stock",
     "may": "May",
+    "media-whatsapp-not-upload": "Error uploading media file to WhatsApp server: %file%",
     "mega-search": "Mega-Search",
     "memcache": "Memcache",
     "memcache-clear": "Memcache cleared.",
@@ -1330,12 +1333,14 @@
     "sdk": "SDK",
     "search": "Search",
     "search-document": "Type the number of %doctype% to search.",
+    "search-message": "Search message",
     "search-product": "Search product",
     "second-hand": "Second hand",
     "second-quarter": "2nd Quarter",
     "second-trimester": "Second trimester",
     "select": "Select",
     "select-all": "Select all",
+    "select-content-for": "Selecciona contenido para %content%",
     "select-none": "Select none",
     "select-plugin-zip-file": "Select plugin zip file:",
     "select-user": "Select User",
@@ -1358,6 +1363,7 @@
     "sent-a-picture": "Sent a picture",
     "sent-a-video": "Sent a video",
     "sent-message-by": "Sent by %nick% on %date%",
+    "sent-messages": "Sent messages",
     "sepa-suffix": "SEPA suffix",
     "september": "September",
     "sequences": "Sequences",
@@ -1611,6 +1617,7 @@
     "valid-for-day": "Valid for one day",
     "validate": "Validate",
     "validate-iban": "Validate IBAN",
+    "validate-whatsapp-not-connection": "Error validating the WhatsApp number, unable to connect to the WhatsApp server",
     "valuation-type": "Valuation type",
     "value": "Value",
     "value-x": "Value X",
