--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -606,6 +606,7 @@
     "field-required": "Champ requis : %field%",
     "fields": "Champs",
     "file": "Fichier",
+    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
     "file-extension-not-accepted": "Erreur lors de l'envoi du fichier %fileName% car son extension n'est pas autorisée. Les extensions autorisées sont : %accepted%",
     "file-name": "Nom du fichier",
     "file-not-exists": "Le fichier n'existe pas : %fileName%",
@@ -694,6 +695,7 @@
     "generated-supplier-orders": "%quantity% ordres de fournisseur générés.",
     "global-dto": "Remise globale",
     "global-dto-2": "Remise globale 2",
+    "graphics": "Gráficos",
     "greater-than": "Plus grand que",
     "grid-help": "Touches Contrôle + Entrée pour un saut de ligne. Vous pouvez déplacer ou supprimer des lignes en effectuant un clic droit sur le numéro de ligne.",
     "group": "Groupe",
@@ -938,6 +940,7 @@
     "maximum-amount-without-cifnif": "Montant maximum sans CIF\/NIF",
     "maximum-stock": "Stock maximum",
     "may": "Mai",
+    "media-whatsapp-not-upload": "Erreur lors du téléchargement du fichier multimédia vers le serveur WhatsApp : %file%",
     "mega-search": "MegaRecherche",
     "memcache": "Memcache",
     "memcache-clear": "Memcache effacé.",
@@ -1330,12 +1333,14 @@
     "sdk": "SDK",
     "search": "Chercher",
     "search-document": "Entrez le numéro du\/de la %doctype% à rechercher.",
+    "search-message": "Message de recherche",
     "search-product": "Rechercher un produit",
     "second-hand": "Seconde main",
     "second-quarter": "2ème trimestre",
     "second-trimester": "Second trimestre",
     "select": "Sélectionner",
     "select-all": "Tout sélectionner",
+    "select-content-for": "Sélectionnez le contenu pour %content%",
     "select-none": "Ne rien sélectionner",
     "select-plugin-zip-file": "Sélectionnez le fichier ZIP du module :",
     "select-user": "Sélectionner un utilisateur",
@@ -1358,6 +1363,7 @@
     "sent-a-picture": "Envoi d'une image",
     "sent-a-video": "Envoi d'une vidéo",
     "sent-message-by": "Soumis par %nick% le %date%.",
+    "sent-messages": "Mensajes enviados",
     "sepa-suffix": "Suffixe SEPA",
     "september": "Septembre",
     "sequences": "Numérotations",
@@ -1611,6 +1617,7 @@
     "valid-for-day": "Valable pour une journée",
     "validate": "Valider",
     "validate-iban": "Valider IBAN",
+    "validate-whatsapp-not-connection": "Erreur lors de la validation du numéro WhatsApp, connexion au serveur WhatsApp impossible.",
     "valuation-type": "Type d'évaluation",
     "value": "Valeur",
     "value-x": "Valeur X",
