--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -606,6 +606,7 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Arquivo",
+    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
     "file-extension-not-accepted": "Erro ó enviar o arquivo %fileName% porque a súa extensión non está permitida. As extensións permitidas son: %accepted%",
     "file-name": "Nome de arquivo",
     "file-not-exists": "O arquivo non existe %fileName%",
@@ -694,6 +695,7 @@
     "generated-supplier-orders": "%quantity% pedidos de provedores xerados.",
     "global-dto": "Desconto global",
     "global-dto-2": "Desconto global 2",
+    "graphics": "Gráficos",
     "greater-than": "Máis grande cá",
     "grid-help": "Control + intro para salto de línea. Podes mover ou eliminar as líneas facendo clic no número de línea.",
     "group": "Grupo",
@@ -938,6 +940,7 @@
     "maximum-amount-without-cifnif": "Máximo importe sen CIF\/NIF",
     "maximum-stock": "Máximo stock",
     "may": "Maio",
+    "media-whatsapp-not-upload": "Erro ao subir o arquivo multimedia ao servidor de WhatsApp: %file%",
     "mega-search": "MegaProcurador",
     "memcache": "Memcache %s",
     "memcache-clear": "Memcache eliminado.",
@@ -1330,12 +1333,14 @@
     "sdk": "SDK",
     "search": "Busca",
     "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-message": "Procurar mensaxe",
     "search-product": "Buscar produto",
     "second-hand": "Segunda man",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo trimestre",
     "select": "Seleccionar",
     "select-all": "Seleccionar todo",
+    "select-content-for": "Selecciona contido para %content%",
     "select-none": "Seleccionar nada",
     "select-plugin-zip-file": "Seleccione o ficheiro zip de extensión:",
     "select-user": "Seleccionar Usuario",
@@ -1358,6 +1363,7 @@
     "sent-a-picture": "Enviou unha imaxe",
     "sent-a-video": "Enviou un video",
     "sent-message-by": "Enviado por %nick% o %date%",
+    "sent-messages": "Mensajes enviados",
     "sepa-suffix": "sufixo SEPA",
     "september": "Setembro",
     "sequences": "Secuencias",
@@ -1611,6 +1617,7 @@
     "valid-for-day": "Válido para un día",
     "validate": "validar",
     "validate-iban": "Validar IBAN",
+    "validate-whatsapp-not-connection": "Error al validar el número de WhatsApp, no se pudo establecer conexión con el servidor de WhatsApp",
     "valuation-type": "Tipo de valoración",
     "value": "Valor",
     "value-x": "Valor X",
