--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -324,7 +324,7 @@
     "cost-price-policy": "Polityka ceny kosztu",
     "counterpart": "Kontrahent",
     "countries": "Kraje",
-    "country": "País",
+    "country": "Kraj",
     "country-not-in-eu": "%codiso% nie należy do żadnego kraju Unii Europejskiej",
     "create": "Utwórz",
     "create-accounting-entry": "Utwórz wpis księgowy",
@@ -367,7 +367,7 @@
     "customer-subaccount-p": "Wskaź subkonto do użycia, lub pozostaw pole puste, aby przypisać automatycznie",
     "customers": "Klienci",
     "customize": "Dostosować",
-    "daily": "Diario",
+    "daily": "Codziennie",
     "dasboard-backup-li1": "Jeśli usuniesz lub odinstalujesz FacturaScripts, stracisz dane.",
     "dasboard-backup-li2": "Jeśli usuniesz lub odinstalujesz XAMPP, stracisz dane.",
     "dasboard-backup-li3": "Jeśli stracisz, sformatujesz lub zniszczysz komputer, stracisz dane.",
@@ -474,7 +474,7 @@
     "document-sequence": "Sekwencja dokumentu",
     "document-sequences": "Sekwencje dokumentów",
     "document-states": "Stany dokumentu",
-    "document-type": "Tipo documento",
+    "document-type": "Typ dokumentu",
     "document-type-valid-length": "Nieprawidłowy typ dokumentu (musi mieć od 1 do 20 znaków).",
     "document-wildcard-info": "Dokument wskazany w nagłówku wpisu księgowego",
     "document-without-total": "Dokument %document% bez sumy lub z sumą równą 0.",
@@ -606,6 +606,7 @@
     "field-required": "Pole wymagane: %field%",
     "fields": "Pola",
     "file": "Plik",
+    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nazwa pliku",
     "file-not-exists": "Plik nie istnieje: %fileName%",
@@ -694,6 +695,7 @@
     "generated-supplier-orders": "Wygenerowano %quantity% zamówień od dostawców.",
     "global-dto": "Globalne Dto",
     "global-dto-2": "Dto. global 2",
+    "graphics": "Gráficos",
     "greater-than": "Większy niż",
     "grid-help": "Control + Enter do wstawienia nowej linii. Możesz przesuwać lub usuwać linie klikając numer linii.",
     "group": "Grupa",
@@ -938,6 +940,7 @@
     "maximum-amount-without-cifnif": "Maksymalna kwota bez CIF\/NIF",
     "maximum-stock": "Maksymalne stany",
     "may": "Mayo",
+    "media-whatsapp-not-upload": "Error al subir el archivo multimedia al servidor de WhatsApp: %file%",
     "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache wyczyszczone.",
@@ -1330,12 +1333,14 @@
     "sdk": "SDK",
     "search": "Szukaj",
     "search-document": "Wpisz numer %doctype%, aby wyszukać.",
+    "search-message": "Szukaj wiadomości",
     "search-product": "Szukaj produktu",
     "second-hand": "Używane",
     "second-quarter": "2 kwartał",
     "second-trimester": "Drugi trymestr",
     "select": "Wybierz",
     "select-all": "Zaznacz wszystko",
+    "select-content-for": "Selecciona contenido para %content%",
     "select-none": "Nie wybieraj nic",
     "select-plugin-zip-file": "Wybierz wtyczkę (zip):",
     "select-user": "Wybierz użytkownika",
@@ -1358,6 +1363,7 @@
     "sent-a-picture": "Envió una imagen",
     "sent-a-video": "Envió un video",
     "sent-message-by": "Enviado por %nick% el %date%",
+    "sent-messages": "Mensajes enviados",
     "sepa-suffix": "Przyrostek SEPA",
     "september": "Septiembre",
     "sequences": "Sekwencje",
@@ -1415,7 +1421,7 @@
     "special-accounts": "Konta specjalne",
     "specials-actions": "Akcje specjalne",
     "spreadsheet-xls": "Plik Excel",
-    "standard": "Estándar",
+    "standard": "Standard",
     "start": "Początek",
     "start-date": "Data rozpoczęcia",
     "start-hour": "Godzina rozpoczęcia",
@@ -1611,6 +1617,7 @@
     "valid-for-day": "Válido para un día",
     "validate": "Zatwierdź",
     "validate-iban": "Waliduj IBAN",
+    "validate-whatsapp-not-connection": "Error al validar el número de WhatsApp, no se pudo establecer conexión con el servidor de WhatsApp",
     "valuation-type": "Typ wyceny",
     "value": "Wartość",
     "value-x": "Wartość X",
