--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -606,6 +606,7 @@
     "field-required": "Campo obrigatório: %field%",
     "fields": "Campos",
     "file": "Arquivo",
+    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
     "file-extension-not-accepted": "Erro ao enviar o arquivo %fileName% pois sua extensão não é permitida. As extensões permitidas são: %accepted%",
     "file-name": "Nome do ficheiro",
     "file-not-exists": "O Ficheiro não existe: %fileName%",
@@ -694,6 +695,7 @@
     "generated-supplier-orders": "%quantity% pedidos de fornecedores gerados.",
     "global-dto": "Dto. global",
     "global-dto-2": "Dto global 2",
+    "graphics": "Gráficos",
     "greater-than": "Maior que",
     "grid-help": "Control + Enter para quebra de linha. Você pode mover ou excluir as linhas clicando no número da linha.",
     "group": "Grupo",
@@ -938,6 +940,7 @@
     "maximum-amount-without-cifnif": "Valor máximo sem CIF\/NIF",
     "maximum-stock": "Estoque máximo",
     "may": "Maio",
+    "media-whatsapp-not-upload": "Error al subir el archivo multimedia al servidor de WhatsApp: %file%",
     "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache foi limpa.",
@@ -1330,12 +1333,14 @@
     "sdk": "SDK",
     "search": "Pesquisar",
     "search-document": "Digite o número do %doctype% para pesquisar.",
+    "search-message": "Buscar mensagem",
     "search-product": "Buscar produto",
     "second-hand": "Segunda mão",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo Trimestre",
     "select": "Selecionar",
     "select-all": "selecionar-todos",
+    "select-content-for": "Selecciona contenido para %content%",
     "select-none": "Selecionar nenhum",
     "select-plugin-zip-file": "Selecionar o arquivo zip do plugin:",
     "select-user": "Selecionar usuário",
@@ -1358,6 +1363,7 @@
     "sent-a-picture": "Enviou uma imagem",
     "sent-a-video": "Enviou um vídeo",
     "sent-message-by": "Enviado por %nick% em %date%",
+    "sent-messages": "Mensajes enviados",
     "sepa-suffix": "Sufixo SEPA",
     "september": "Setembro",
     "sequences": "Sequências",
@@ -1611,6 +1617,7 @@
     "valid-for-day": "Válido por um dia",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
+    "validate-whatsapp-not-connection": "Error al validar el número de WhatsApp, no se pudo establecer conexión con el servidor de WhatsApp",
     "valuation-type": "Tipo de avaliação",
     "value": "Valor",
     "value-x": "Valor X",
