--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -606,6 +606,7 @@
     "field-required": "Camp requerit: %field%",
     "fields": "Camps",
     "file": "Fitxer",
+    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
     "file-extension-not-accepted": "Error al enviar l'arxiu %fileName% perquè la seua extensió no està permesa. Les extensions permeses són: %accepted%",
     "file-name": "Nom de l'archiu",
     "file-not-exists": "L'archiu %fileName% no existix",
@@ -694,6 +695,7 @@
     "generated-supplier-orders": "s'han generat %quantity% encomandes de proveïdor.",
     "global-dto": "Dte. global",
     "global-dto-2": "Dte. global 2",
+    "graphics": "Gràfics",
     "greater-than": "Major que",
     "grid-help": "Control + intro per salt de línia. Pots desplaçar o suprimir les línies fent clic al número de línia.",
     "group": "Grup",
@@ -938,6 +940,7 @@
     "maximum-amount-without-cifnif": "Màxim import sense CIF\/NIF",
     "maximum-stock": "Estoc màxim",
     "may": "Maig",
+    "media-whatsapp-not-upload": "Error al pujar el fitxer multimèdia al servidor de WhatsApp: %file%",
     "mega-search": "MegaCercador",
     "memcache": "Memcache",
     "memcache-clear": "S'ha netejat la Memcache.",
@@ -1330,12 +1333,14 @@
     "sdk": "SDK",
     "search": "Busca",
     "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-message": "Cercar missatge",
     "search-product": "Search product",
     "second-hand": "Segona mà",
     "second-quarter": "2n trimestre",
     "second-trimester": "Segon trimestre",
     "select": "select",
     "select-all": "Seleccionar tot",
+    "select-content-for": "Selecciona contingut per %content%",
     "select-none": "Seleccionar res",
     "select-plugin-zip-file": "Selecciona el plugin (zip):",
     "select-user": "Selecciona l'usuari",
@@ -1358,6 +1363,7 @@
     "sent-a-picture": "Envià una imatge",
     "sent-a-video": "S'ha enviat un vídeo",
     "sent-message-by": "Enviat per %nick% el %date%",
+    "sent-messages": "Mensajes enviados",
     "sepa-suffix": "Sufix SEPA",
     "september": "Setembre",
     "sequences": "Sequències",
@@ -1611,6 +1617,7 @@
     "valid-for-day": "Vàlid per a un dia",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
+    "validate-whatsapp-not-connection": "Error al validar el número de WhatsApp, no es va poder establir connexió amb el servidor de WhatsApp",
     "valuation-type": "Tipo de valoració",
     "value": "Valor",
     "value-x": "Valor X",
