--- a/Core/Translation/es_PE.json
+++ b/Core/Translation/es_PE.json
@@ -606,6 +606,7 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Archivo",
+    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nombre de archivo",
     "file-not-exists": "No existe el archivo: %fileName%",
@@ -694,6 +695,7 @@
     "generated-supplier-orders": "%quantity% pedidos de proveedor generados.",
     "global-dto": "Dto. global",
     "global-dto-2": "Dto. global 2",
+    "graphics": "Gráficos",
     "greater-than": "Mayor que",
     "grid-help": "Control + intro para salto de línea. Puedes mover o eliminar las líneas haciendo clic en el número de línea.",
     "group": "Grupo",
@@ -938,6 +940,7 @@
     "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
     "maximum-stock": "Stock máximo",
     "may": "Mayo",
+    "media-whatsapp-not-upload": "Error al subir el archivo multimedia al servidor de WhatsApp: %file%",
     "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache limpiada.",
@@ -1330,12 +1333,14 @@
     "sdk": "SDK",
     "search": "Buscar",
     "search-document": "Escribe el número de %doctype% para buscar.",
+    "search-message": "Buscar mensaje",
     "search-product": "Buscar producto",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo trimestre",
     "select": "Seleccionar",
     "select-all": "Seleccionar todo",
+    "select-content-for": "Selecciona contenido para %content%",
     "select-none": "Seleccionar nada",
     "select-plugin-zip-file": "Seleccionar plugin (zip):",
     "select-user": "Seleccionar usuario",
@@ -1358,6 +1363,7 @@
     "sent-a-picture": "Envió una imagen",
     "sent-a-video": "Envió un video",
     "sent-message-by": "Enviado por %nick% el %date%",
+    "sent-messages": "Mensajes enviados",
     "sepa-suffix": "Sufijo SEPA",
     "september": "Septiembre",
     "sequences": "Secuencias",
@@ -1611,6 +1617,7 @@
     "valid-for-day": "Válido para un día",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
+    "validate-whatsapp-not-connection": "Error al validar el número de WhatsApp, no se pudo establecer conexión con el servidor de WhatsApp",
     "valuation-type": "Tipo de valoración",
     "value": "Valor",
     "value-x": "Valor X",
