Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -940,7 +940,7 @@
     "maximum-amount-without-cifnif": "M",
     "maximum-stock": "Höchstbestand",
     "may": "Mai",
-    "media-whatsapp-not-upload": "Error al subir el archivo multimedia al servidor de WhatsApp: %file%",
+    "media-whatsapp-not-upload": "Fehler beim Hochladen der Mediendatei auf den WhatsApp-Server: %file%",
     "mega-search": "MegaSuchmaschine",
     "memcache": "Memcache 0",
     "memcache-clear": "Memcache klärte sich.",
@@ -1340,7 +1340,7 @@
     "second-trimester": "Zweites Trimester",
     "select": "Auswählen",
     "select-all": "Alle auswählen",
-    "select-content-for": "Selecciona contenido para %content%",
+    "select-content-for": "Wählen Sie Inhalt für %content% aus",
     "select-none": "Keine Auswahl treffen",
     "select-plugin-zip-file": "Wählen Sie die Plugin-Zip-Datei:",
     "select-user": "Benutzer auswählen",
