--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -695,7 +695,7 @@
     "generated-supplier-orders": "%quantity% generated supplier orders.",
     "global-dto": "Global discount",
     "global-dto-2": "Global discount 2",
-    "graphics": "Gráficos",
+    "graphics": "Graphics",
     "greater-than": "Greater than",
     "grid-help": "Control + enter for line break. You can move or delete the lines by clicking on the line number.",
     "group": "Group",
