--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -606,7 +606,7 @@
     "field-required": "Beharrezko eremua: %field%",
     "fields": "Eremuak",
     "file": "Artxiboa",
-    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
+    "file-audio-codec-not-accepted": "Errore bat gertatu da %fileName% audio-fitxategia bidaltzean, %codec% kodeak ez baitu onartzen. Onartutako kodeak hauek dira: %supported%",
     "file-extension-not-accepted": "Errorea fitxategia bidaltzerakoan %fileName%-en extensioa ez dela onartua. Onartutako extensioak hauek dira: %accepted%",
     "file-name": "Artxiboaren izena",
     "file-not-exists": "%fileName% artxiboa ez da existitzen",
@@ -1340,7 +1340,7 @@
     "second-trimester": "Bigarren hiruhilekoa",
     "select": "Aukeratu",
     "select-all": "Guztiak hautatu",
-    "select-content-for": "Selecciona contenido para %content%",
+    "select-content-for": "Hautatu edukia %content%rako",
     "select-none": "Bat ere ez hautatu",
     "select-plugin-zip-file": "Hautatu plugin zip fitxategia:",
     "select-user": "Aukeratu erabiltzailea",
@@ -1617,7 +1617,7 @@
     "valid-for-day": "Egunerako baliozkotua",
     "validate": "Balioztatu",
     "validate-iban": "IBAN-a baieztatu",
-    "validate-whatsapp-not-connection": "Error al validar el número de WhatsApp, no se pudo establecer conexión con el servidor de WhatsApp",
+    "validate-whatsapp-not-connection": "WhatsApp zenbakia balioztatzen errore bat egon da, ezin izan da WhatsApp zerbitzariarekin konexioa ezarri",
     "valuation-type": "Balorazio mota",
     "value": "Balioa",
     "value-x": "X balioa",
