--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -606,7 +606,7 @@
     "field-required": "Champ requis : %field%",
     "fields": "Champs",
     "file": "Fichier",
-    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
+    "file-audio-codec-not-accepted": "Erreur lors de l'envoi du fichier audio %fileName% car son codec %codec% n'est pas autorisé. Les codecs autorisés sont : %supported%",
     "file-extension-not-accepted": "Erreur lors de l'envoi du fichier %fileName% car son extension n'est pas autorisée. Les extensions autorisées sont : %accepted%",
     "file-name": "Nom du fichier",
     "file-not-exists": "Le fichier n'existe pas : %fileName%",
@@ -695,7 +695,7 @@
     "generated-supplier-orders": "%quantity% ordres de fournisseur générés.",
     "global-dto": "Remise globale",
     "global-dto-2": "Remise globale 2",
-    "graphics": "Gráficos",
+    "graphics": "Graphiques",
     "greater-than": "Plus grand que",
     "grid-help": "Touches Contrôle + Entrée pour un saut de ligne. Vous pouvez déplacer ou supprimer des lignes en effectuant un clic droit sur le numéro de ligne.",
     "group": "Groupe",
