--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -27,7 +27,7 @@
     "accounting-balances": "Salda",
     "accounting-concept": "Koncepcja księgowa",
     "accounting-data-missing": "Nie znaleziono planu kont dla ćwiczenia %exerciseName%",
-    "accounting-date": "Fecha de asiento",
+    "accounting-date": "Data księgowania",
     "accounting-entries": "Zapisy",
     "accounting-entry": "Wpis",
     "accounting-entry-date": "Data księgowania",
@@ -190,7 +190,7 @@
     "cant-change-agent-in-settlement": "Nie można zmienić agenta. Prowizja jest już rozliczona.",
     "cant-connect-database": "Nie można połączyć z bazą danych",
     "cant-convert-to-innodb": "Nie można przekonwertować tabeli '%tableName%' na InnoDB. Niezbędne dla FacturaScripts.",
-    "cant-create-customer-subaccount": "Imposible crear la subcuenta para el cliente %customerCode%",
+    "cant-create-customer-subaccount": "Nie można utworzyć subkonta dla klienta %customerCode%",
     "cant-create-folder": "Nie można utworzyć folderu %folderName%.",
     "cant-create-subaccount-supplier": "Nie można utworzyć subkonta dla dostawcy %supplierCode%",
     "cant-delete-audit-log": "Nie można usunąć logu audytu",
@@ -710,7 +710,7 @@
     "group-by-year": "Grupuj według roku",
     "group-by-year-unixtime": "Grupuj według roku (unix time)",
     "group-more-docs-p": "Jeśli chcesz, możesz grupować razem z innymi dokumentami tego klienta\/dostawcy",
-    "group-name": "Nombre del Grupo",
+    "group-name": "Nazwa grupy",
     "group-or-split": "Grupować lub dzielić",
     "group-or-split-p": "Ten kreator pozwala generować nowy dokument na podstawie linii innych dokumentów. Wybierz ilości, które chcesz użyć, datę nowego dokumentu i naciśnij przycisk generuj.",
     "grouping-type": "Grupowanie",
