--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1340,7 +1340,7 @@
     "second-trimester": "Segundo Trimestre",
     "select": "Selecionar",
     "select-all": "selecionar-todos",
-    "select-content-for": "Selecciona contenido para %content%",
+    "select-content-for": "Selecione conteúdo para %content%",
     "select-none": "Selecionar nenhum",
     "select-plugin-zip-file": "Selecione o arquivo zip do plugin:",
     "select-user": "Selecionar usuário",
